--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -26,6 +26,25 @@ collections:
       - {label: "Featured Image", name: "featuredimage", widget: image}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
+      
+  - name: "cocktails"
+    label: "Cocktails"
+    folder: "src/pages/cocktails"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "cocktail-post"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description", name: "description", widget: "text"}
+      - {label: "Image", name: "image", widget: image}
+      - {label: "Recipe", name: "recipe", widget: "object", fields: [
+          {label: "Ingredients", name: "ingredients", widget: "list", fields: [
+            {label: "Quantity", name: "quantity", widget: "number"},
+            {label: "Unit", name: "unit", widget: "select", options: ["ml", "cl", "l", "unit", "oz"], default: "cl"},
+            {label: "Name", name: "name", widget: "string"}
+          ]},
+          {label: "Instructions", name: "instructions", widget: "list", field: {label: Instruction, name: instruction, widget: string}}
+        ]}
 
   - name: "pages"
     label: "Pages"
